--- a/ViewChat/App.config
+++ b/ViewChat/App.config
@@ -17,7 +17,7 @@
         <value>Skin/Office 2019 Black</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value>Pine</value>
+        <value>Custom/Custom Palette #1</value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
@@ -38,10 +38,40 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value>Agave Nerd Font Mono;10.875</value>
+        <value>Agave Nerd Font Mono;9.75</value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
-        <value />
+        <value>
+          <CustomPaletteCollection>
+            <Skin Name="Office 2019 Black">
+              <SvgPalette Name="Custom Palette #1">
+                <SvgColor Name="Paint" Value="38,35,50" />
+                <SvgColor Name="Paint High" Value="50,50,50" />
+                <SvgColor Name="Paint Shadow" Value="50,50,50" />
+                <SvgColor Name="Paint Deep Shadow" Value="68,68,68" />
+                <SvgColor Name="Paint Dark" Value="10,10,10" />
+                <SvgColor Name="Brush" Value="241,241,241" />
+                <SvgColor Name="Brush High" Value="241,241,241" />
+                <SvgColor Name="Brush Light" Value="120,120,120" />
+                <SvgColor Name="Brush Major" Value="102,102,102" />
+                <SvgColor Name="Brush Minor" Value="70,70,70" />
+                <SvgColor Name="Accent Paint" Value="7,117,104" />
+                <SvgColor Name="Accent Paint Dark" Value="35,100,92" />
+                <SvgColor Name="Accent Paint Light" Value="68,68,68" />
+                <SvgColor Name="Accent Paint Lighter" Value="80,80,80" />
+                <SvgColor Name="Accent Brush" Value="255,255,255" />
+                <SvgColor Name="Accent Brush Light" Value="7,117,104" />
+                <SvgColor Name="Red" Value="233,76,79" />
+                <SvgColor Name="Green" Value="115,221,131" />
+                <SvgColor Name="Blue" Value="59,154,220" />
+                <SvgColor Name="Yellow" Value="248,183,96" />
+                <SvgColor Name="Black" Value="212,212,212" />
+                <SvgColor Name="Gray" Value="120,120,120" />
+                <SvgColor Name="White" Value="50,50,50" />
+              </SvgPalette>
+            </Skin>
+          </CustomPaletteCollection>
+        </value>
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
